align fix

--- a/resources/styles/less/components/loopobject.less
+++ b/resources/styles/less/components/loopobject.less
@@ -67,3 +67,11 @@
 .looparea-task .loop_task .loop_object_footer .loop_object_icon {
 	display: none;
 } 
+
+.loop_object.tright {
+	margin: 0 0 1rem 1rem;
+}
+
+.loop_object.tleft {
+	margin: 0 1rem 1rem 0;
+}
