--- a/resources/styles/less/components/loopzoom.less
+++ b/resources/styles/less/components/loopzoom.less
@@ -64,9 +64,9 @@
     margin: 0 auto;
 }
 
-.loopzoom-modal {
-    //padding-left: 17px;
-   // padding: 0 20px;
+.loopzoom-modal .noresize div:first-of-type,
+.loopzoom .noresize div:first-of-type {
+    display: none !important;
 }
 
 .loopzoom-modal .modal-header {
@@ -75,6 +75,7 @@
 }
 
 .loopzoom-modal .modal-content {
+    background: #fff;
     border: none;
     border-radius: 0;
     padding: 8px;
